# Group-7---DIT168

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Dockerfile.armhf  LICENSE  README.md  build_cross.sh  build_local.sh  compile.sh  docker-compose.yml  install_dependencies.sh  main.cpp  messages.odvd
carcode/: CMakeLists.txt
carcode/tests/: UnitTests.cpp
examples/: CMakeLists.txt  DummyTestClass.cpp  DummyTestClass.hpp  TestSender.cpp  helloworld.cpp  install_dependencies.sh  receiver.cpp  sender.cpp
examples/opencv/opencv-3.4.0/: setup_build_env.sh
examples/prime_checker/: .TestPrimeChecker.cpp.swp  CMakeLists.txt  TestPrimeChecker.cpp  helloworld.cpp  setup_build_env.sh
examples/tests/: TestDummyClass.cpp  TestSender.cpp
remoteControl/: CMakeLists.txt  messages.odvd.cpp  remoteControl.cpp  remotecontrol.cpp
remotecontrol/: CMakeLists.txt  Dockerfile  build_local.sh  docker-compose.yml  remotecontrol.cpp  remotecontrol.hpp
remotecontrol/ps4/: .env  docker-compose.yml
sensor_service/: main.cpp
v2v/: v2v.cpp  v2v.hpp
v2v_service/: CMakeLists.txt  Dockerfile  Dockerfile.armhf  build_cross.sh  build_local.sh  docker-compose.yml  fl_sim.cpp  get_ip_address.py  main.cpp  messages.odvd  rc_sim.cpp  test.cpp
v2v_service/v2v/: v2v.cpp  v2v.hpp
visualisation/: CMakeLists.txt  Dockerfile  build_local.sh  main.cpp  rc_sim.cpp
visualisation/single-viewer/: build_local.sh
visualisation/single-viewer/src/: libcluon-viewer-0.01.js
visualisation/v2v/: v2v.cpp  v2v.hpp
visualisation/visualisation/: visualisation.cpp  visualisation.hpp
